--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.0.0",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "convex": "^1.11.2",
+    "express": "^4.19.2",
     "lucide-react": "^0.372.0",
     "next": "14.2.2",
     "next-themes": "^0.3.0",
