--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tiptap/extension-bullet-list": "^2.4.0",
     "@tiptap/extension-code": "^2.4.0",
     "@tiptap/extension-color": "^2.4.0",
     "@tiptap/extension-highlight": "^2.4.0",
+    "@tiptap/extension-list-item": "^2.4.0",
     "@tiptap/extension-task-item": "^2.4.0",
     "@tiptap/extension-task-list": "^2.4.0",
     "@tiptap/extension-typography": "^2.4.0",
@@ -41,6 +43,7 @@
     "lucide-react": "^0.372.0",
     "next": "14.2.2",
     "next-themes": "^0.3.0",
+    "novel": "^0.4.2",
     "raact": "^1.0.0",
     "react": "^18",
     "react-dom": "^18",
@@ -59,6 +62,7 @@
     "@types/node": "^20",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
+    "concurrently": "^8.2.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
