--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,7 +29,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/your-app:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/${{ github.repository }}:${{ github.sha }}
 
     - name: Azure Login
       uses: azure/login@v1
@@ -40,6 +40,6 @@ jobs:
       id: deploy
       uses: azure/webapps-deploy@v2
       with:
-        app-name: your-app-name
+        app-name: ${{ github.repository }}
         slot-name: production
-        images: ${{ secrets.DOCKER_USERNAME }}/your-app:latest
+        images: ${{ secrets.DOCKER_USERNAME }}/${{ github.repository }}:${{ github.sha }}
