--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,7 +29,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: noureldinelabyad/octopus:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/${{ github.repository }}:${{ github.sha }}
 
     - name: Azure Login
       uses: azure/login@v1
