--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: Publish Docker image
 
 on:
   push:
@@ -29,7 +29,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/your-app:latest
+        tags: noureldinelabyad/octopus:latest
 
     - name: Azure Login
       uses: azure/login@v1
@@ -40,6 +40,6 @@ jobs:
       id: deploy
       uses: azure/webapps-deploy@v2
       with:
-        app-name: your-app-name
+        app-name: octopus
         slot-name: production
-        images: ${{ secrets.DOCKER_USERNAME }}/your-app:latest
+        images: noureldinelabyad/octopus:latest
