--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,7 +30,9 @@ jobs:
       with:
         push: true
         tags: noureldinelabyad/octopus:latest
-        build-args: CONVEX_DEPLOY_KEY=${{ secrets.CONVEX_DEPLOY_KEY }}
+        build-args: |
+         CONVEX_DEPLOY_KEY=${{ secrets.CONVEX_DEPLOY_KEY }}
+         EDGE_STORE_SECRET_KEY=${{ secrets.EDGE_STORE_SECRET_KEY }}
 
     - name: Azure Login
       uses: azure/login@v1
