--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,6 +32,7 @@ jobs:
         tags: noureldinelabyad/octopus:latest
         build-args: |
          CONVEX_DEPLOY_KEY=${{ secrets.CONVEX_DEPLOY_KEY }}
+         EDGE_STORE_ACCESS_KEY=${{ secrets.EDGE_STORE_ACCESS_KEY}}
          EDGE_STORE_SECRET_KEY=${{ secrets.EDGE_STORE_SECRET_KEY }}
 
     - name: Azure Login
