--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -35,7 +35,7 @@ jobs:
          CONVEX_DEPLOY_KEY=${{ secrets.CONVEX_DEPLOY_KEY }}
          EDGE_STORE_ACCESS_KEY=${{ secrets.EDGE_STORE_ACCESS_KEY }}
          EDGE_STORE_SECRET_KEY=${{ secrets.EDGE_STORE_SECRET_KEY }}
-         ConvexReactClient=${{ secrets.ConvexReactClient }}
+         ConvexReactClient=${{ secrets.NEXT_PUBLIC_CONVEX_URL }}
 
     - name: Azure Login
       uses: azure/login@v1
