--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,6 +44,10 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+    - name: Verify Azure Login
+      run: |
+        az account show
+
     - name: Deploy to Azure Web App
       id: deploy
       uses: azure/webapps-deploy@v2
