--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -55,3 +55,14 @@ jobs:
         app-name: myoctopus
         slot-name: production
         images: noureldinelabyad/octopus:latest
+
+    - name: Build and push container image to registry
+      uses: azure/container-apps-deploy-action@v2
+      with:
+        appSourcePath: ${{ github.workspace }} 
+        registryUrl: docker.io
+        registryUsername: ${{ secrets.OCTOPUS_REGISTRY_USERNAME }}
+        registryPassword: ${{ secrets.OCTOPUS_REGISTRY_PASSWORD }}
+        containerAppName: octopus
+        resourceGroup: octopus
+        imageToBuild: noureldinelabyad/octopus:latest
