--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -58,4 +58,4 @@ jobs:
       with:
         app-name: myoctopus
         slot-name: production
-        images: noureldinelabyad/octopus:latest
+        images: noureldinelabyad/octopus:${{ github.sha }}
