--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -58,3 +58,21 @@ jobs:
         app-name: myoctopus
         slot-name: production
         images: noureldinelabyad/octopus:${{ github.sha }}
+
+  Containerize:
+    needs: 
+      - build
+      - Deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Build and push container image to registry
+        uses: azure/container-apps-deploy-action@v2
+        with:
+          appSourcePath: ${{ github.workspace }} 
+          registryUrl: docker.io
+          registryUsername: ${{ secrets.OCTOPUS_REGISTRY_USERNAME }}
+          registryPassword: ${{ secrets.OCTOPUS_REGISTRY_PASSWORD }}
+          containerAppName: octopus
+          resourceGroup: octopus
+          imageToBuild: noureldinelabyad/octopus:${{ github.sha }}
+          dockerfilePath: Dockerfile
