--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build:
+  Build:
     runs-on: ubuntu-latest
 
     steps:
@@ -39,30 +39,9 @@ jobs:
          NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
          CLERK_SECRET_KEY=${{ secrets.CLERK_SECRET_KEY }}
 
-  Deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-    - name: Azure Login
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-    - name: Verify Azure Login
-      run: |
-        az account show
-    - name: Deploy to Azure Web App
-      id: deploy
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: myoctopus
-        slot-name: production
-        images: noureldinelabyad/octopus:${{ github.sha }}
-
   Containerize:
     needs: 
-      - build
-      - Deploy
+      - Build
     runs-on: ubuntu-latest
     steps:
       - name: Azure Login
@@ -84,3 +63,25 @@ jobs:
           resourceGroup: octopus
           imageToBuild: noureldinelabyad/octopus:${{ github.sha }}
           dockerfilePath: Dockerfile
+
+  Deploy:
+    needs: 
+      - Build
+      - Containerize
+    runs-on: ubuntu-latest
+    steps:
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Verify Azure Login
+      run: |
+        az account show
+    - name: Deploy to Azure Web App
+      id: deploy
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: myoctopus
+        slot-name: production
+        images: noureldinelabyad/octopus:${{ github.sha }}
